Wed Jul 15 09:10:50 GMT 2015  Olly Betts <olly@survex.com>

	* doc/HACKING.htm: Update list of debian packages to install to build
	  from git.

Wed Jul 15 08:16:44 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac,doc/manual.sgml: Update for 1.2.21.

Wed Jul 15 08:15:20 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Document that 1.2.21 is needed for *fix using
	  latitude and longitude, or with standard deviations.

Tue Jul 14 17:53:21 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue Jul 14 17:46:38 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/: Fix *fix with standard deviations when *cs is
	  in use.

Wed Jul 08 09:42:14 GMT 2015  Olly Betts <olly@survex.com>

	* src/commands.c,tests/: Fix coordinate systems using latitude and
	  longitude - PROJ.4 wants these in radians, but we were passing
	  degrees, which would generally cause the conversion to the output
	  coordinate system to fail.  Reported by Wookey.

Wed Jul 01 10:15:49 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Strip references to obsolete versions of MS Windows.

Tue Jun 30 12:22:55 GMT 2015  Olly Betts <olly@survex.com>

	* src/kml.cc: Put all the <LineString> elements into a <MultiGeometry>,
	  rather than having each in a separate <Placemark>.

Tue Jun 30 09:32:17 GMT 2015  Olly Betts <olly@survex.com>

	* src/: Whitespace cleanup.

Mon Jun 29 12:27:49 GMT 2015  Olly Betts <olly@survex.com>

	* doc/cad3d.sgml,doc/manual.sgml: Remove references to SpeleoGen,
	  which hasn't been updated for many years, and which can't read
	  current the recent versions of the .3d format.

Mon Jun 29 03:14:52 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Sun Jun 28 13:35:47 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Sun Jun 28 11:43:11 GMT 2015  Olly Betts <olly@survex.com>

	* src/message.c: Ignore any "@<something>" modifier in the language
	  code.

Sun Jun 28 11:40:06 GMT 2015  Olly Betts <olly@survex.com>
